обновление секций с портфолио

--- a/resources/sass/frontend/project/cards/portfolio-item-card/portfolio-item-card--slide.sass
+++ b/resources/sass/frontend/project/cards/portfolio-item-card/portfolio-item-card--slide.sass
@@ -5,4 +5,4 @@
     @extend .portfolio-item-card
 
     @media ($breakpoint_md) and ($breakpoint_lg_max)
-        width: 664px !important
+        //width: 664px !important
