--- a/resources/sass/frontend/project/cards/portfolio-item-card/portfolio-item-card.sass
+++ b/resources/sass/frontend/project/cards/portfolio-item-card/portfolio-item-card.sass
@@ -2,6 +2,7 @@
 
 $ratio: 1.6
 .portfolio-item-card
+    width: 100%
 
     @media ($breakpoint_xl)
-        width: calc((100% - 24px) / 4) !important
+        width: 100%
