добавлено отображение названия стиля на моб версии секции с поп. стилями

--- a/resources/sass/frontend/base.sass
+++ b/resources/sass/frontend/base.sass
@@ -67,3 +67,7 @@ figcaption
 figure > img
     align-self: center
 
+picture
+    display: flex
+    justify-content: center
+    align-items: center
