--- a/resources/sass/frontend/base.sass
+++ b/resources/sass/frontend/base.sass
@@ -3,7 +3,7 @@
 @import "colors"
 
 html, body
-    width: 100%
+    //width: 100%
     //overflow-x: hidden */если включить, то неработает position: sticky у дочерних элементов любого уровня */
 
 html
